# MotionAuth

./: .gitignore  AndroidManifest.xml  README.markdown  build.gradle
MotionAuth/: AndroidManifest.xml
MotionAuth/res/layout/: activity_auth_motion.xml  activity_regist_motion.xml  activity_regist_name_input.xml  activity_registrant_list.xml  activity_start.xml  activity_view_registed_data.xml  seekdialog.xml
MotionAuth/res/menu/: regist_motion.xml
MotionAuth/res/values/: strings.xml
MotionAuth/src/com/example/motionauth/: AuthMotion.java  AuthNameInput.java  Calc.java  CorrectDeviation.java  Correlation.java  Formatter.java  Lowpass.java  RegistMotion.java  RegistNameInput.java  RegistrantList.java  Start.java  ViewRegistedData.java  WriteData.java
MotionAuth/src/net/trileg/motionauth/: Start.java
gradle/wrapper/: gradle-wrapper.properties
res/layout/: activity_auth_motion.xml  activity_auth_name_input.xml  activity_regist_motion.xml  activity_registrant_list.xml  activity_view_registed_data.xml  change_get_times.xml  seekdialog.xml
res/menu/: regist_motion.xml
res/values/: configs.xml  strings.xml
src/cpp/: AddNoise.cpp  AddNoise.h  CMakeLists.txt  DenoisingAutoencoder.cpp  DenoisingAutoencoder.h  JniCppUtil.cpp  JniCppUtil.h  MlpInterface.cpp  MlpInterface.h  MultiLayerPerceptron.cpp  MultiLayerPerceptron.h  Neuron.cpp  Neuron.h  Normalize.cpp  Normalize.h  StackedDenoisingAutoencoder.cpp  StackedDenoisingAutoencoder.h  mlp.cpp
src/net/trileg/motionauth/: Start.java
src/net/trileg/motionauth/Authentication/: Authentication.java  GetData.java  (+2 more)
(+86 files in other folders)
